--- a/peerSimTest_v2/.classpath
+++ b/peerSimTest_v2/.classpath
@@ -2,5 +2,24 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/jfreesvg-2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/orsoncharts-1.4-eval-nofx.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/orsonpdf-1.6-eval.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/swtgraphics2d.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/peersim-1.0.5/djep-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/peersim-1.0.5/jep-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/peersim-1.0.5/peersim-1.0.5.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/dcs/vrac/test/peersim-1.0.5/doc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/dcs/vrac/test/peersim-1.0.5/peersim-doclet.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
