--- a/peerSimTest_v2/.classpath
+++ b/peerSimTest_v2/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/taysir/Documents/lip6_2e_sejour/simulations/lib/peersim-1.0.5.jar"/>
+	<classpathentry kind="lib" path="/Users/taysir/Documents/lip6_2e_sejour/simulations/lib/djep-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/taysir/Documents/lip6_2e_sejour/simulations/lib/jep-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
