--- a/peerSimTest_v2/.project
+++ b/peerSimTest_v2/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src-pastry</name>
+			<type>2</type>
+			<location>/Users/taysir/Documents/lip6_2e_sejour/simulations/lib/pastry/src</location>
+		</link>
+	</linkedResources>
 </projectDescription>
